--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chivent</title>
-    <script type="module" crossorigin src="/assets/main-dNHu8X2b.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-CaBTzcsE.css">
+    <script type="module" crossorigin src="/chivent-technical/assets/main-dNHu8X2b.js"></script>
+    <link rel="stylesheet" crossorigin href="/chivent-technical/assets/main-CaBTzcsE.css">
   </head>
   <body>
     <div id="root"></div>
